# django-dev-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
CVProject/: asgi.py  settings.py  urls.py  wsgi.py
audit/: middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/testsuite/: test_logging.py
main/: constants.py  context_processors.py  models.py  tasks.py  urls.py  views.py
main/api/: urls.py
main/api/v1/: serializers.py  urls.py  views.py
main/fixtures/: sample_cv.json
main/migrations/: 0001_initial.py
main/templates/: 400.html  403.html  404.html  500.html  base.html
main/templates/audit/: request_log_list.html
main/templates/main/: base.html  cv_detail.html  cv_list.html  cv_pdf.html  settings_view.html  translation_result.html
main/testsuite/: test_api.py  test_models.py  test_views.py
